[package]
name = "rust_ahash_jemalloc"
version = "0.1.0"
authors = ["Sergei Fomin <sergio-dna@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.3", features = ["std"] }
jemallocator = "0.3.0"
